tests/negative/neg_result_mutated.safe
-- Test: neg_result_mutated
-- Description: Variant field access after mutation within guarded branch.
--   The branch on R.OK establishes the discriminant, but the subsequent
--   assignment to R invalidates it. Accessing R.Value after mutation
--   without re-guarding violates the discriminant-check safety rule.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: REJECT discriminant_check_not_established

package neg_Result_Mutated

   type error_Code is range 0 to 255;

   type parse_Result (ok : boolean = False) is record
      case ok
         when True
            value : integer;
         when False
            error : error_Code;



   function try_Parse (input : integer) returns parse_Result

      if input >= 0
         return (ok = True, value = input);
      else
         return (ok = False, error = 1);



   --  NONCONFORMING: R.OK = True is established by the guard, but
   --  the assignment R = Try_Parse(Other) invalidates the fact.
   --  Accessing R.Value after mutation is rejected.
   function unsafe_After_Mutation (first : integer;
                                   second : integer) returns integer
      r : parse_Result = try_Parse (first);

      if r.ok
         r = try_Parse (second);  -- invalidates R.OK = True
         return r.value;          -- REJECTED: R.OK no longer established
      else
         return 0;




